--- a/administration/templates/administration/information_admin.html
+++ b/administration/templates/administration/information_admin.html
@@ -14,7 +14,7 @@
                 <div class="col-sm-3">
                     <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups" style="float: right">
                             <a id="standard-grey-button-light" class="btn btn-default btn-sml" type="button" href="{% url  'administration:information_delete' pk=information.pk %}" style="margin-top: 15px; margin-bottom: 15px;"><span class="glyphicon glyphicon-remove"></span> Delete</a>
-                            <a id="standard-grey-button-light" class="btn btn-default btn-sml" type="button" href="{% url 'administration:informations' %}" style="margin-top: 15px; margin-bottom: 15px;"><span class="glyphicon glyphicon-chevron-left"></span> Back</a>
+                            <a id="standard-grey-button-light" class="btn btn-default btn-sml" type="button" href="{% url 'administration:information' %}" style="margin-top: 15px; margin-bottom: 15px;"><span class="glyphicon glyphicon-chevron-left"></span> Back</a>
                     </div>
                 </div>
             </div>
@@ -86,7 +86,7 @@
         </div>
 
         <div class="modal-footer">
-            <a id="standard-grey-button-light" class="btn btn-default btn-sml" type="button" href="{% url 'administration:informations' %}" style="float: right; margin: 15px;"><span class="glyphicon glyphicon-chevron-left"></span> Back</a>
+            <a id="standard-grey-button-light" class="btn btn-default btn-sml" type="button" href="{% url 'administration:information' %}" style="float: right; margin: 15px;"><span class="glyphicon glyphicon-chevron-left"></span> Back</a>
         </div>
     </div>
 </div>
