--- a/administration/templates/administration/users.html
+++ b/administration/templates/administration/users.html
@@ -7,46 +7,57 @@
             <div class="modal-header">
                 <div class="row">
                     {% if usr %}
-                        <div class="col-sm-2">
-                            <a id="standard-grey-button-light" class="btn btn-default btn-sml" href="{% url 'administration:users' %}" style="margin: 15px;">Show All</a>
-                        </div>
-                        <div class="col-sm-4">
+                        <div class="col-sm-12">
                             <h2 class="text-center" id="standard-modal-headline">Normal Users</h2>
                         </div>
-                    {% else%}
-                        <div class="col-sm-6">
-                            <h2 class="text-center" id="standard-modal-headline">Normal Users</h2>
+                        <div class="col-md-2 col-sm-3">
+                            <input id="standard-grey-button-bold" type="button" class="btn btn-block btn-lg btn-primary" onclick="location.href='{% url 'administration:users' %}'" style="margin-top: 15px; margin-bottom: 15px;" value="Show all"/>
                         </div>
-                    {% endif %}
-                    <!-- search bar -->
-                    <div class="col-sm-6">
                         <form class="form" role="form" method="post" accept-charset="UTF-8">
                         {%csrf_token%}
                             <div class="form-group">
-                                {% if messages %}
-                                    {% for message in messages %}
-                                        {% if message.message == 'wrong_email' %}
-                                            <div class="row">
-                                                <div class="col-sm-12">
-                                                    <div class="error-messages" style="margin-top: 10px;">
-                                                        <p>User with this E-Mail doesn't exist!</p>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        {% endif %}
-                                    {% endfor %}
-                                {% endif %}
-                                <div class="row">
-                                    <div class="col-sm-8">
-                                        <input type="email" class="form-control input-lg" placeholder="Email from User" name="email" style="margin-top: 15px; margin-bottom: 15px;" required/>
-                                    </div>
-                                    <div class="col-sm-4">
-                                        <input id="standard-grey-button-bold" type="submit" class="btn btn-block btn-lg btn-primary" style="margin-top: 15px;" value="Search"/>
-                                    </div>
+                                <div class="col-md-8 col-sm-6">
+                                    <input type="email" class="form-control input-lg" placeholder="Email from User" name="email" maxlength="254" style="margin-top: 15px; margin-bottom: 15px;" required/>
+                                </div>
+                                <div class="col-md-2 col-sm-3">
+                                    <input id="standard-grey-button-bold" type="submit" class="btn btn-block btn-lg btn-primary" style="margin-top: 15px;" value="Search"/>
                                 </div>
                             </div>
                         </form>
-                    </div><!-- end search bar -->
+                    {% else %}
+                        <div class="col-sm-6">
+                            <h2 class="text-center" id="standard-modal-headline">Normal Users</h2>
+                        </div>
+                        <!-- search bar -->
+                        <div class="col-sm-6">
+                            <form class="form" role="form" method="post" accept-charset="UTF-8">
+                            {%csrf_token%}
+                                <div class="form-group">
+                                    {% if messages %}
+                                        {% for message in messages %}
+                                            {% if message.message == 'wrong_email' %}
+                                                <div class="row">
+                                                    <div class="col-sm-12">
+                                                        <div class="error-messages" style="margin-top: 10px;">
+                                                            <p>User with this E-Mail doesn't exist!</p>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            {% endif %}
+                                        {% endfor %}
+                                    {% endif %}
+                                    <div class="row">
+                                        <div class="col-sm-8">
+                                            <input type="email" class="form-control input-lg" placeholder="Email from User" name="email" style="margin-top: 15px; margin-bottom: 15px;" required/>
+                                        </div>
+                                        <div class="col-sm-4">
+                                            <input id="standard-grey-button-bold" type="submit" class="btn btn-block btn-lg btn-primary" style="margin-top: 15px;" value="Search"/>
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
+                        </div><!-- end search bar -->
+                    {% endif %}
                 </div>
             </div>
             <!-- list all or only one user -->
