--- a/administration/templates/administration/categories.html
+++ b/administration/templates/administration/categories.html
@@ -123,12 +123,17 @@
                                 </div>
                             </div>
                         <!-- end list the searched category -->
+                        {% load admin_filters %}
                         {% else %}
                             {% for categorie in categories %}
                                 <div class="list-group-item" id="standard-list-group-item-div">
                                     <div class="row">
                                         <div class="col-sm-10">
                                             {{ categorie.name }}
+                                        </div>
+                                        <div class="col-sm-10">
+                                            
+                                                
                                         </div>
                                         <div class="col-sm-2">
                                             <a id="standard-grey-button-light" class="btn btn-default btn-sml" href="{% url 'administration:categories_delete' pk=categorie.pk %}" style="float: right;"><span class="glyphicon glyphicon-remove"></span> Delete</a>
