--- a/administration/templates/administration/groups.html
+++ b/administration/templates/administration/groups.html
@@ -159,10 +159,10 @@
                             <div class="list-group-item" id="standard-list-group-item-div">
                                 <div class="row">
                                     <div class="col-sm-10">
-                                        {{ group.group.name }}
+                                        {{ group.name }}
                                     </div>
                                     <div class="col-sm-10">
-                                        
+                                        {{ group.user_set.all|length }}
                                     </div>
                                     <div class="col-sm-2">
                                         <a id="standard-grey-button-light" class="btn btn-default btn-sml" href="{% url 'administration:group_delete' pk=group.pk %}" title="Delete Group" style="float: right;"><span class="glyphicon glyphicon-remove"></span> Delete</a>
