--- a/administration/templates/administration/categories.html
+++ b/administration/templates/administration/categories.html
@@ -1,5 +1,6 @@
 {% extends 'administration/base_admin.html' %}
 {% block content %}
+{% load admin_filters %}
 
 <div class="row">
 
@@ -114,8 +115,11 @@
                         {% if categ %}
                             <div class="list-group-item" id="standard-list-group-item-div">
                                 <div class="row">
+                                    <div class="col-sm-12">
+                                        <p>{{ categ.name }}</p>
+                                    </div>
                                     <div class="col-sm-10">
-                                        {{ categ.name }}
+                                        <h6>Number of members: {{ categ|filter_cats|length }}</h6>
                                     </div>
                                     <div class="col-sm-2">
                                         <a id="standard-grey-button-light" class="btn btn-default btn-sml" href="{% url 'administration:categories_delete' pk=categ.pk %}" style="float: right;"><span class="glyphicon glyphicon-remove"></span> Delete</a>
@@ -123,17 +127,15 @@
                                 </div>
                             </div>
                         <!-- end list the searched category -->
-                        {% load admin_filters %}
                         {% else %}
                             {% for categorie in categories %}
                                 <div class="list-group-item" id="standard-list-group-item-div">
                                     <div class="row">
-                                        <div class="col-sm-10">
-                                            {{ categorie.name }}
+                                        <div class="col-sm-12">
+                                            <p>{{ categorie.name }}</p>
                                         </div>
                                         <div class="col-sm-10">
-                                            {{ categorie|filter_cats|length }}
-                                                
+                                            <h6>Number of members: {{ categorie|filter_cats|length }}</h6>
                                         </div>
                                         <div class="col-sm-2">
                                             <a id="standard-grey-button-light" class="btn btn-default btn-sml" href="{% url 'administration:categories_delete' pk=categorie.pk %}" style="float: right;"><span class="glyphicon glyphicon-remove"></span> Delete</a>
