--- a/basics/templates/basics/information_new.html
+++ b/basics/templates/basics/information_new.html
@@ -23,7 +23,7 @@
 					</div>	
 
 					<div class="form-group">
-						<input type="submit" class="btn btn-block btn-lg btn-primary" value="Create & Send"/>
+						<input type="submit" class="btn btn-block btn-lg btn-primary grey" value="Create & Send"/>
 					</div>
 				</form>
 			</div>
