--- a/basics/templates/basics/needs_new.html
+++ b/basics/templates/basics/needs_new.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <!-- Introduction Row -->
-	<div class="modal-dialog" id="sign-up">
+	<div cid="standart-model">
 		<div class="modal-content">
 			<div class="modal-header">
 				<h1 class="text-center">create new Need</h1>
@@ -29,7 +29,7 @@
 					</div>	
 
 					<div class="form-group">
-						<input type="submit" class="btn btn-block btn-lg btn-primary" value="Create & Send"/>
+						<input type="submit" class="btn btn-block btn-lg btn-primary grey" value="Create & Send"/>
 					</div>
 				</form>
 			</div>
