--- a/basics/templates/basics/chat.html
+++ b/basics/templates/basics/chat.html
@@ -40,7 +40,7 @@
           <div id="rooms-container">
           </div>
       </div>
-      <a href="{% url 'basics:kick_user' roomname=roomname %}" class="btn btn-primary">Kick User</a>
+      <a href="{% url 'basics:kick_user' roomname=roomname %}" class="btn btn-primary grey">Kick User</a>
     </div>
     <div class="col-md-8" id="app"></div>
     </div>
