--- a/basics/templates/basics/immediate_aid.html
+++ b/basics/templates/basics/immediate_aid.html
@@ -1,7 +1,7 @@
 {% extends 'basics/base.html' %}
 
 {% block content %}
-<div class="modal-dialog" id="sign-up">
+<div id="standart-model">
   <div class="modal-content">
     <div class="modal-header">
       <h1 class="text-center">Immediate Aid</h1>
@@ -30,7 +30,7 @@
       		{% include "basics/map_testing.html" %}</p>
 		</div>	
         <div class="form-group">
-          <input type="submit" onclick="register()" class="btn btn-block btn-lg btn-primary" value="Create & Send"/>
+          <input type="submit" onclick="register()" class="btn btn-block btn-lg btn-primary grey" value="Create & Send"/>
         </div>
       </form>
     </div>
