--- a/basics/templates/basics/immediate_aid.html
+++ b/basics/templates/basics/immediate_aid.html
@@ -1,13 +1,13 @@
 {% extends 'basics/base.html' %}
 
 {% block content %}
-<div id="standart-model">
+<div id="standard-modal">
   <div class="modal-content">
     <div class="modal-header">
       <h1 class="text-center">Immediate Aid</h1>
     </div>
     <div class="modal-body">
-      <form class="form" role="form" method="post" accept-charset="UTF-8" id="login-nav">
+      <form class="form" role="form" method="post" accept-charset="UTF-8">
         {%csrf_token%}
         <p style="font-size:160%;"> category <p\>
 		<select class="form-control" name="{{need.categorie.name}}">
@@ -28,9 +28,9 @@
 		<div class="form-group">
         	<p id="choose-location-text">At least we need your location to let people in your neighborhood know that you need help.
       		{% include "basics/map_testing.html" %}</p>
-		</div>	
+		</div>
         <div class="form-group">
-          <input type="submit" onclick="register()" class="btn btn-block btn-lg btn-primary grey" value="Create & Send"/>
+          <input id="standard-grey-button-bold" type="submit" onclick="register()" class="btn btn-block btn-lg btn-primary" value="Create & Send"/>
         </div>
       </form>
     </div>
