--- a/basics/templates/basics/information_new.html
+++ b/basics/templates/basics/information_new.html
@@ -2,13 +2,13 @@
 
 {% block content %}
 <!-- Introduction Row -->
-	<div class="modal-dialog" id="sign-up">
+	<div id="standard-modal">
 		<div class="modal-content">
 			<div class="modal-header">
 				<h1 class="text-center">create new Information or Question</h1>
 			</div>
 			<div class="modal-body">
-				<form class="form" role="form" method="post" accept-charset="UTF-8" id="login-nav">
+				<form class="form" role="form" method="post" accept-charset="UTF-8">
 					{%csrf_token%}
 					<p style="font-size:160%;"> description <p\>
 						<div class="form-group">
@@ -20,10 +20,10 @@
 					<div class="form-group">
              				<p id="choose-location-text">If this information is not for your standard location from your profile choose an other one.
       					{% include "basics/map_testing.html" %}</p>
-					</div>	
+					</div>
 
 					<div class="form-group">
-						<input type="submit" class="btn btn-block btn-lg btn-primary grey" value="Create & Send"/>
+						<input id="standard-grey-button-bold" type="submit" class="btn btn-block btn-lg btn-primary" value="Create & Send"/>
 					</div>
 				</form>
 			</div>
