--- a/basics/templates/basics/needs_new.html
+++ b/basics/templates/basics/needs_new.html
@@ -2,13 +2,13 @@
 
 {% block content %}
 <!-- Introduction Row -->
-	<div cid="standart-model">
+	<div id="standard-modal">
 		<div class="modal-content">
 			<div class="modal-header">
 				<h1 class="text-center">create new Need</h1>
 			</div>
 			<div class="modal-body">
-				<form class="form" role="form" method="post" accept-charset="UTF-8" id="login-nav">
+				<form class="form" role="form" method="post" accept-charset="UTF-8">
 					{%csrf_token%}
 					<p style="font-size:160%;"> category </p>
 					<select class="form-control" name="{{need.categorie.name}}">
@@ -22,14 +22,14 @@
 						</div>
 					<div class="form-group">
 						<textarea type="description" class="form-control input-lg" placeholder="description" name="{{need.text.name}}"  rows="4"></textarea>
-					</div>		
+					</div>
 					<div class="form-group">
              				<p id="choose-location-text">If you do not like to use your standard location choose an other one.
       					{% include "basics/map_testing.html" %}</p>
-					</div>	
+					</div>
 
 					<div class="form-group">
-						<input type="submit" class="btn btn-block btn-lg btn-primary grey" value="Create & Send"/>
+						<input id="standard-grey-button-bold" type="submit" class="btn btn-block btn-lg btn-primary" value="Create & Send"/>
 					</div>
 				</form>
 			</div>
