--- a/basics/templates/basics/profil.html
+++ b/basics/templates/basics/profil.html
@@ -78,8 +78,8 @@
       longditude: {{ Userdata.address.longditude }} 					<br>
 			</b>
 
-			<a class="btn btn-warning btn-sm"href="{% url 'basics:profil_edit' %}">Edit my profile</a>
-			<a class="btn btn-danger btn-sm"href="{% url 'basics:profil_delete' %}">Delete my profile</a>
+			<a id="standard-grey-button-bold" class="btn btn-sm"href="{% url 'basics:profil_edit' %}">Edit my profile</a>
+			<a id="standard-grey-button-bold" class="btn btn-sm"href="{% url 'basics:profil_delete' %}">Delete my profile</a>
 			<br>
 			<br>
 			</div>
