--- a/basics/templates/basics/contact_us.html
+++ b/basics/templates/basics/contact_us.html
@@ -2,13 +2,13 @@
 
 {% block content %}
 <!-- Introduction Row -->
-	<div class="modal-dialog" id="sign-up">
+	<div id="standard-modal">
 		<div class="modal-content">
 			<div class="modal-header">
-				<h1 class="text-center">contact us <small>We are undemanding</small></h1>
+				<h2 class="text-center" id="standard-modal-headline">Contact Us</h2>
 			</div>
 			<div class="modal-body">
-				<form class="form" role="form" method="post" accept-charset="UTF-8" id="login-nav">
+				<form class="form" role="form" method="post" accept-charset="UTF-8">
 					{%csrf_token%}
 						<div class="form-group">
 		  					<input type="email" class="form-control input-lg" placeholder="Email" name="email" required/>
@@ -21,7 +21,7 @@
 					</div>
 
 					<div class="form-group">
-						<input type="submit" class="btn btn-block btn-lg btn-primary" value="Send"/>
+						<input id="standard-grey-button-bold" type="submit" class="btn btn-block btn-lg btn-primary" value="Send"/>
 					</div>
 				</form>
 			</div>
