--- a/basics/static/basics/css/styles.css
+++ b/basics/static/basics/css/styles.css
@@ -35,6 +35,14 @@
 	display: none;
 }
 
+.room-container {
+	height: 70%;
+	left: 0;
+	right: 0;
+	top: 0;
+	overflow-y: scroll;
+	overflow-x: hidden;
+}
 .message-list {
 	padding: 1rem;
 	height: 70%;
