leaving group is now possible, if last user leaves group, group will be deleted

--- a/basics/templates/basics/group_detail.html
+++ b/basics/templates/basics/group_detail.html
@@ -71,7 +71,7 @@
 			</b>
 
 			<a id="standard-grey-button-bold" class="btn btn-sm"href="{% url 'basics:group_edit' pk=group.pk %}">Edit group profile</a>
-			<a id="standard-grey-button-bold" class="btn btn-sm"href="{% url 'basics:group_leave' pk=group.pk %}">Exit group</a>
+			<a id="standard-grey-button-bold" class="btn btn-sm"href="{% url 'basics:group_leave' pk=group.pk %}">Leave group</a>
 			<br>
 			<br>
 			</div>
