--- a/basics/templates/basics/groups.html
+++ b/basics/templates/basics/groups.html
@@ -16,8 +16,8 @@
 	                            <th>{{ group.name }}</th>
 	                            <th>{{ group.email }}</th>
 	                            <th>
-	                                <a href="{% url 'basics:group_detail' pk=group.pk %}" class="btn btn-warning btn-sm" title="edit">
-	                                    <span class="glyphicon glyphicon-pencil"></span>
+	                                <a href="{% url 'basics:group_detail' pk=group.pk %}" class="btn btn-warning btn-sm" title="group detail">
+	                                    <span>group detail</span>
 	                                </a>
 	                            </th>
 	                        </tr>
