--- a/basics/templates/basics/chat.html
+++ b/basics/templates/basics/chat.html
@@ -14,7 +14,7 @@
     <script src="https://code.getmdl.io/1.1.3/material.min.js"></script>
 
   <body>
-  <div class = "row" style="box-shadow: 0 0 30px black; height:70%" >
+  <div class = "row " style="box-shadow: 0 0 30px black; height:70%; border-radius: 1em;" >
     <!--<div class="col-md-4">
       <div class="card card-block">
         <h4 class="card-title">Card title</h4>
@@ -34,7 +34,7 @@
       </div>
       <a href="{% url 'basics:kick_user' roomname=roomname %}" class="btn btn-primary">Kick User</a>
     </div>-->
-    <div class="col-md-4" style="background-color: #d1d1d1; height:100%">
+    <div class="col-md-4 col-xs-12" style="background-color: #d1d1d1; height:100%">
       <div class="card card-block" >
         <h4 class="card-title">Your Chats</h4>
           <div id="rooms-container">
@@ -42,7 +42,7 @@
       </div>
       <a id="standard-grey-button-bold" href="{% url 'basics:kick_user' roomname=roomname %}" class="btn btn-primary">Kick User</a>
     </div>
-    <div class="col-md-8" id="app"></div>
+    <div class="col-md-8 col-xs-12" id="app"></div>
     </div>
     <script>
 'use strict';
@@ -379,13 +379,13 @@
   var Room = function Room(props){
     return React.createElement(
       'a',
-      {className:'goupe-list-element', id:'standard-list-group-item-div', href:"/chat/"+props['room']['hash'] },
+      {className:'goupe-list-element ', id:'standard-list-group-item-div', href:"/chat/"+props['room']['hash'] },
       React.createElement(
         'div',
-        {className:'row '},
+          {className:'col-sm-11 col-xs-3 grey room',  id:'standart-modal'},
         React.createElement(
           'div',
-          {className:'col-sm-12'},
+          {className:''},
           React.createElement(
             'div',
             {className:'card card-block'},
@@ -448,7 +448,7 @@
       }
       return React.createElement(
         'div',
-        { className: 'room-container', ref: this.getNodeRef },
+        { className: 'room-container room-container-small', ref: this.getNodeRef },
         rendered_rooms
       );
     }
