--- a/basics/templates/basics/needs_all.html
+++ b/basics/templates/basics/needs_all.html
@@ -67,9 +67,13 @@
                                 </div>
                                 <div class="col-sm-1"></div>
                                 {% if not user.userdata in need.reported_by.all %}
-                                <div class="col-sm-1">
-                                  <button type="button" id="{{ need.id }}" class="btn btn-default btn-sml standard-grey-button-light " onclick="location.href='{% url 'basics:report_need' pk=need.pk %}';" style="float: right; margin-top: 10px;"><span class="glyphicon glyphicon-alert"></span> Report</button>
-                                </div>
+                                  <div class="col-sm-1">
+                                    <button type="button" id="{{ need.id }}" class="btn btn-default btn-sml standard-grey-button-light " onclick="location.href='{% url 'basics:report_need' pk=need.pk %}';" style="float: right; margin-top: 10px;"><span class="glyphicon glyphicon-alert"></span> Report</button>
+                                  </div>
+                                {% else %}
+                                  <div class="col-sm-1">
+                                    <button type="button" class="btn btn-default btn-sml standard-grey-button-light disabled" onclick="#" style="float: right; margin-top: 10px;"><span class="glyphicon glyphicon-alert"></span> Report</button>
+                                  </div>
                                 {% endif %}
                             </div>
                         </a>
@@ -93,6 +97,8 @@
                                         <button type="button" id="standard-grey-button-bold" class="btn btn-default btn-sml standard-grey-button-light " onclick="location.href='{% url 'basics:needs_help' id=need.id %}';" ><span class="glyphicon glyphicon-comment"></span>Help</button>
                                         {% if not user.userdata in need.reported_by.all %}
                                           <button type="button" id="standard-grey-button-bold" class="btn btn-default btn-sml standard-grey-button-light " onclick="location.href='{% url 'basics:report_need' pk=need.pk %}';"><span class="glyphicon glyphicon-alert"></span> Report</button>
+                                        {% else %}
+                                          <button type="button" id="standard-grey-button-bold" class="btn btn-default btn-sml standard-grey-button-light disabled" onclick="#"><span class="glyphicon glyphicon-alert"></span> Report</button>
                                         {% endif %}
                                         <button id="standard-grey-button-bold" type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
                                     </div>
